methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:14: error: ';' expected but 'else' found.
    }else{
     ^SlugTracking:25: error: Unmatched closing brace '}' ignored here
}
^